--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,20 @@
   padding: 0;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 html {
   font-size: 62.5%;
+  width: 100%;
 }
 
 body {
   font-family: "Poppins", sans-serif;
+  width: 100%;
 }
 
 .flex-center {
@@ -35,7 +43,7 @@ body {
 /*  */
 
 #navbar {
-  justify-content: end;
+  justify-content: space-between;
   gap: 2rem;
   height: 7rem;
   width: 100%;
@@ -55,6 +63,10 @@ i {
   font-size: 2rem;
   color: #fff;
   margin-right: 4rem;
+}
+
+#navbar p {
+  margin-left: 30px;
 }
 
 #welcome-section {
@@ -77,12 +89,16 @@ i {
 .projects-grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  width: 100%;
+  width: 80%;
   margin: 0 auto;
   justify-content: space-evenly;
   gap: 6rem;
   padding: 8rem;
   padding-bottom: 16rem;
+}
+
+.project-card {
+  margin-top: 3rem;
 }
 
 .project-card:hover {
@@ -100,7 +116,6 @@ i {
   height: 100%;
   object-fit: cover;
   border: none;
-  margin: 0;
 }
 
 .profile-img {
@@ -112,19 +127,33 @@ i {
   display: block;
 }
 
+/* .project-tag {
+  padding: 1rem 1rem;
+} */
+
 #projects {
   height: fit-content;
   width: 100%;
   background-color: #666;
 }
 
-#projects p {
+#projects .project-tag {
   background-color: #0b1028;
   font-size: 2rem;
-  /* display: block; */
+  /* display: inline-block; */
   color: #fff;
   text-decoration: none;
   text-align: center;
+}
+
+.code-tag {
+  width: 50%;
+}
+
+.project-tag p {
+  /* display: block; */
+  margin-block-start: 0em;
+  margin-block-end: 0em;
 }
 
 #projects a {
